FIX: clipping

--- a/web/css/source/extend/actions/_actions-dropdown.less
+++ b/web/css/source/extend/actions/_actions-dropdown.less
@@ -55,6 +55,10 @@
     margin-top: @indent__xs;
 }
 
+.admin-user-account-text {
+    line-height: 1.2;
+}
+
 //
 //  Select menu
 //  ---------------------------------------------
